# Rust_Practice

./: LICENSE  README.md
Fil_MGR/: Cargo.toml  README.md
Fil_MGR/src/: main.rs
desktop_adb/: Cargo.toml  README.md
desktop_adb/src/: main.rs  utils.rs
desktop_adb/src/adb_lib/: adb_struct.rs
desktop_adb/src/adb_lib/adb_struct/: adb_method.rs
desktop_adb/src/utils/: adb.rs  cmd_utils.rs
imp_queue/: Cargo.toml
imp_queue/src/: main.rs
imp_stack/: Cargo.toml
imp_stack/src/: main.rs
markdown_ed/: Cargo.toml
markdown_ed/src/: main.rs
markdown_ed/src/cli_lib/: cli_struct.rs  imp_method.rs
terminal_tui/: Cargo.toml  README.md
terminal_tui/src/: main.rs
terminal_tui/src/terminal_lib/: element.rs
