[package]
name = "desktop_adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[targets]
windows = ["x86_64-pc-windows-gnu"]
linux = ["x86_64-unknown-linux-gnu"]

[dependencies]
iced = "0.10"
native-dialog = "0.6.4"